--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -98,8 +98,7 @@ set -g status-left-length 40
 set -g status-left '#[fg=white]#S#[fg=white] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
- #[fg=red]#(battery discharging)#[default]#(battery charging)'
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M #[fg=red]#(battery discharging)#[default]#(battery charging)'
 
 ###########################
 # Colors
@@ -114,7 +113,7 @@ set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg white
 
 # set color of active pane
-set -g pane-border-fg colour235
+# set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg white
 set -g pane-active-border-bg black
